--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ label {
   align-items: center;
 }
 
-input {
+form input {
   padding: 1vmin;
   font-size: 2vmin;
   border: .1vmin solid var(--tan-3);
@@ -130,7 +130,7 @@ input:focus {
   border-color: var(--orange);
 }
 
-button, a.button {
+form button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
@@ -163,4 +163,51 @@ button:disabled, form:invalid button[type="submit"] {
 button[type="submit"] {
   grid-column: span 2;
   margin: 1vmin 0 0;
+}
+
+.post-container {
+  width: 75vw;
+}
+
+.post-item {
+  border: 2px solid black;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  height: 90vh;
+  position: fixed;
+  border: 2px solid black;
+  right: 0;
+  gap: 15px;
+}
+
+.comment-page {
+  border: 2px solid black;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 75vw;
+}
+
+.show-page {
+  width: 75vw;
+}
+
+.create-container {
+  width: 75vw;
+}
+
+.log-out {
+  
+}
+a {
+  color: red;
+}
+
+h2 {
+  background-color: white;
 }
