--- a/src/index.css
+++ b/src/index.css
@@ -179,25 +179,30 @@ button[type="submit"] {
   border-radius: 20px;
   padding: 10px;
   margin-bottom: 10px;
+  position: relative;
+  padding-bottom: 50px;
 }
 
 .side-bar {
   display: flex;
   flex-direction: column;
   width: 20vw;
-  height: 90vh;
-  position: fixed;
+  /* height: 90vh; */
+  position: absolute;
   border: 2px solid black;
-  right: 0;
+  right: 10px;
   gap: 15px;
+  padding: 5px;
+  border-radius: 20px;
 }
 
 .comment-page {
   border: 2px solid black;
   border-radius: 20px;
-  padding: 10px;
+  padding: 30px;
   margin-bottom: 10px;
   width: 75vw;
+  padding-bottom: 50px;
 }
 
 .show-page {
@@ -206,6 +211,39 @@ button[type="submit"] {
 
 .create-container {
   width: 75vw;
+}
+
+.likes-container {
+  position: absolute;
+}
+
+.likes-container span {
+  margin: 10px;
+}
+
+.comment-count {
+  position: absolute;
+  right: 5px;
+}
+
+.post-text {
+  max-width: 75ch;
+  margin: 0 auto;
+  line-height: 1.5;
+}
+
+.post-title {
+  display: block;
+  margin: 10px;
+}
+
+.post {
+  position: relative;
+  padding: 30px;
+  border: 2px solid black;
+  padding-bottom: 50px;
+  border-radius: 20px;
+  margin-bottom: 20px;
 }
 
 .log-out {
