--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,6 @@ body {
   padding: 2vmin;
   height: 100vh;
   font-family: 'Comfortaa', cursive;
-  /* background-color: rgba(0, 234, 255, 0.667); */
   background-image: linear-gradient(rgba(255,255,255,.6),
   rgba(255,255,255,.6)),
   url("https://images.unsplash.com/photo-1517884885877-a46b0f5327db?ixlib=rb-4.0.3&ixid=MnwxM[…]G90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
@@ -175,6 +174,12 @@ button[type="submit"] {
   width: 75vw;
 }
 
+.back-to-top {
+  margin: 5rem auto;
+  cursor: pointer;
+  max-width: fit-content;
+}
+
 .post-item {
   border: 2px solid black;
   border-radius: 20px;
@@ -283,6 +288,12 @@ button[type="submit"] {
 
 .display-4 span{
   -webkit-text-stroke: 2px black;
+  cursor: pointer;
+}
+
+.display-4 {
+  max-width: fit-content;
+  margin: 1rem auto;
 }
 
 .post {
@@ -293,6 +304,10 @@ button[type="submit"] {
   border-radius: 20px;
   margin-bottom: 20px;
   background-color: rgba(255,255,255,.8);
+}
+
+.new-post-title {
+  color: black;
 }
 
 .new-comment-input {
@@ -382,4 +397,6 @@ h1 {
 }
 .rules {
   text-align: center;
+  list-style-type: none;
+  padding: 5px;
 }
