--- a/src/index.css
+++ b/src/index.css
@@ -215,11 +215,13 @@ button[type="submit"] {
 .like-button {
   font-size: 24px;
   cursor: pointer;
+  color: gray;
 }
 
 .dislike-button {
   font-size: 24px;
   cursor: pointer;
+  color: gray;
 }
 
 .menu-icon {
